--- a/css/main.css
+++ b/css/main.css
@@ -36,3 +36,12 @@ h1:after {
   overflow: hidden;
   text-align: center;
 }
+
+.btn {
+  background-color: #8B7C7B;
+  border-color: #8B7C7B;
+  font-family: #fff;
+  border-radius: 25px;
+
+  color: #fff;
+}
