Update push in header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-  <header class="text-center header">
+  <header class="text-center header push-1-4">
 
     <div class="nav-bar gutter-2">
       <a href="index.html" alt="project-page">Homepage</a>
