--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 
     <div class="nav-bar gutter-2">
       <nav>
-        <a class="gutter-1-8" href="project.html" alt="project-page">Work</a>
+        <a class="gutter-1-8" href="{{site.baseurl}}/project.html" alt="project-page">Work</a>
         <a class="gutter-1-8" href="#about" alt="About-me">About</a>
       <nav>
     </div>
