Update link to pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
   <header class="text-center header push-1-4">
 
     <div class="nav-bar gutter-2">
-      <a href="index.html" alt="project-page">Homepage</a>
+      <a href="index.html" alt="homepage">Homepage</a>
     </div>
 
     <div class="push-1-8 my-name gutter">
@@ -23,7 +23,7 @@
 
     <div class="nav-bar gutter-2">
       <nav>
-        <a class="gutter-1-8" href="{{site.baseurl}}/project.html" alt="project-page">Work</a>
+        <a class="gutter-1-8" href="{{site.baseurl}}/project.html" alt="projects-page">Work</a>
         <a class="gutter-1-8" href="#about" alt="About-me">About</a>
       <nav>
     </div>
