--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,8 +23,10 @@
 
     <div class="nav-bar gutter-2">
       <nav>
-        <a class="gutter-1-8" href="{{site.baseurl}}/project.html" alt="projects-page">Work</a>
-        <a class="gutter-1-8" href="#about" alt="About-me">About</a>
+        <ul>
+          <li><a class="gutter-1-8" href="{{site.baseurl}}/project.html" alt="projects-page">Work</a></li>
+          <li><a class="gutter-1-8" href="#about" alt="About-me">About</a></li>
+        </ul>
       <nav>
     </div>
 
