Adding site.baseurl to index

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
   <header class="text-center header push-1-4">
 
     <div class="nav-bar gutter-2">
-      <a href="index.html" alt="homepage">Homepage</a>
+      <a href="{{site.baseurl}}/index.html" alt="homepage">Homepage</a>
     </div>
 
     <div class="push-1-8 my-name gutter">
