Remove ul list on default

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,10 +23,8 @@
 
     <div class="nav-bar gutter-2">
       <nav>
-        <ul>
-          <li><a class="gutter-1-8" href="{{site.baseurl}}/project.html" alt="projects-page">Work</a></li>
-          <li><a class="gutter-1-8" href="#about" alt="About-me">About</a></li>
-        </ul>
+        <a class="gutter-1-8" href="{{site.baseurl}}/project.html" alt="projects-page">Work</a>
+        <a class="gutter-1-8" href="#about" alt="About-me">About</a>
       <nav>
     </div>
 
