--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,30 +11,11 @@
 </head>
 <body>
 
-  <header class="text-center header push-1-4">
+  <header>
 
-    <div class="nav-bar gutter-2">
-      <a href="{{site.baseurl}}/index.html" alt="homepage">Homepage</a>
-    </div>
-
-    <div class="push-1-8 my-name gutter">
-      <h1 class="tena">Krystyna MacLeod</h1>
-    </div>
-
-    <div class="nav-bar gutter-2">
-      <nav>
-        <a class="gutter-1-8" href="{{site.baseurl}}/project.html" alt="projects-page">Work</a>
-        <a class="gutter-1-8" href="#about" alt="About-me">About</a>
-      <nav>
-    </div>
+  {% include nav.html %}
 
   </header>
-
-  <div class="push text-center">
-    <i class="icon i-96">
-      <img class="img-flex" src="images/icon-head.svg" alt="head"></img>
-    </i>
-  </div>
 
   <main>
     {{content}}
