Add content to footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,7 @@
   </main>
 
   <footer class="pad-t-1-2 pad-b-1-2 center-text">
+    {% include nav.html %}
     <p class="micro push-1-8">© Krystyna Macleod</P>
   </footer>
 
