--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
 
      <div class="unit s-1 m-1-2 l-1-3 center-text">
        <i class="icon i-256">
-         <img class="img-flex card-image" src="images/profile-photo.png" alt="card"></img>
+         <img class="img-flex card-image" src="images/profile-photo.png" alt="self-photo"></img>
        </i>
      </div>
 
@@ -12,7 +12,8 @@
        <div class="grid">
          <div class="unit s-1 m-1-2 l-1-2 island-1-4">
            <h2 class="tera push-1-2">About</h2>
-           <p class="push-1-8 micro">My name is Krystyna Macleod and I am a graphic designer that is studying in Algonquin College. I'm from Norhtern Quebec and came out to school to study. I have a background in Animation and then mov</p>
+           <p class="push-1-8 micro">My name is Krystyna Macleod and I am graphic designer interested in illustrations, UX/UI and branding. I am finishing my final year at Algonquin College for Graphic Design.</p>
+           <p class="push-1-8 micro">I’m from reserve called Mistissini in Northern Quebec. I have an animation background and moved on to Graphic Design.</p>
            <p class="micro">I design graphics, illustration and UX/UI design.</p>
          </div>
          <div class="unit s-1 m-1-2 l-1-2 island-1-4">
