--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,7 +8,7 @@
        </i>
      </div>
 
-     <div class="unit s-1 m-1-2 l-2-3">
+     <div class="unit s-1 m-1-2 l-1-2">
        <div class="grid">
          <div class="unit s-1 m-1-2 l-1-2 island-1-4">
            <h2 class="tera push-1-2">About</h2>
@@ -16,10 +16,10 @@
            <p class="push-1-8 micro">I’m from reserve called Mistissini in Northern Quebec. I have an animation background and moved on to Graphic Design.</p>
            <p class="micro">I design graphics, illustration and UX/UI design.</p>
          </div>
-         <div class="unit s-1 m-1-2 l-1-2 island-1-4">
+         <div class="unit s-1 m-1-2 l-2-3 island-1-4">
            <h2 class="tera push-1-2">Contact</h2>
            <p class="push-1-8 micro">E-mail me at</p>
-           <p class="micro">hey@krystynamacleod.design</p>
+           <a itemprop="email" href="mailto:hey@krystynamacleod.design">hey@krystynamacleod.design</a>
          </div>
        </div>
      </div>
