--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,6 +1,6 @@
 <section id="about">
 
-   <div class="wrapper grid pad-t-2 pad-b-2">
+   <div class="grid pad-t-2 pad-b-2">
 
      <div class="unit s-1 m-1-2 l-1-4 center-text">
        <i class="icon i-256">
