--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,21 +2,21 @@
 
    <div class="grid pad-t-2 pad-b-2">
 
-     <div class="unit s-1 m-1-2 l-1-4 center-text">
+     <div class="unit s-1 m-11 l-1-4 center-text">
        <i class="icon i-256">
          <img class="img-flex card-image" src="images/profile-photo.png" alt="self-photo"></img>
        </i>
      </div>
 
-     <div class="unit s-1 m-1-2 l-3-4">
+     <div class="unit s-1 m-1 l-3-4">
        <div class="grid">
-         <div class="unit s-1 m-1-2 l-1-2 island-1-4">
+         <div class="unit s-1 m-1 l-1-2 island-1-4">
            <h2 class="tera push-1-2">About</h2>
            <p class="push-1-8 micro">My name is Krystyna Macleod and I am graphic designer interested in illustrations, UX/UI and branding. I am finishing my final year at Algonquin College for Graphic Design.</p>
            <p class="push-1-8 micro">I’m from reserve called Mistissini in Northern Quebec. I have an animation background and moved on to Graphic Design.</p>
            <p class="micro">I design graphics, illustration and UX/UI design.</p>
          </div>
-         <div class="unit s-1 m-1-2 l-2-3 island-1-4">
+         <div class="unit s-1 m-1 l-2-3 island-1-4">
            <h2 class="tera push-1-2">Contact</h2>
            <p class="push-1-8 micro">E-mail me at</p>
            <a itemprop="email" href="mailto:hey@krystynamacleod.design">hey@krystynamacleod.design</a>
