--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,7 +8,7 @@
        </i>
      </div>
 
-     <div class="unit s-1 m-1 l-3-4">
+     <div class="unit s-1 m-1 l-3-4 gutter">
        <div class="grid">
          <div class="unit s-1 m-1 l-1-2 island-1-4">
            <h2 class="tera push-1-2">About</h2>
