--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,13 +2,13 @@
 
    <div class="grid pad-t-2 pad-b-2">
 
-     <div class="unit s-1 m-11 l-1-4 center-text">
+     <div class="unit s-1 m-1-3 l-1-4 center-text">
        <i class="icon i-256">
          <img class="img-flex card-image" src="images/profile-photo.png" alt="self-photo"></img>
        </i>
      </div>
 
-     <div class="unit s-1 m-1 l-3-4 gutter">
+     <div class="unit s-1 m-2-3 l-3-4 gutter">
        <div class="grid">
          <div class="unit s-1 m-1 l-1-2 island-1-4">
            <h2 class="tera push-1-2">About</h2>
