--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,13 @@ footer {
 }
 
 .nav-bar {
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: -20px;
+}
+
+@media only screen and (min-width: 25em) {
+
+  .nav-bar {
+    margin-top: 20px;
+  }
+
 }
