--- a/css/main.css
+++ b/css/main.css
@@ -63,7 +63,7 @@ footer {
 }
 
 .nav-bar {
-  margin-top: 5px;
+  margin-top: 20px;
 }
 
 @media only screen and (min-width: 25em) {
@@ -74,6 +74,7 @@ footer {
 
   h1 {
     color: #404040;
+    display: block;
   }
 
 }
