Add pad to top of icon

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,7 +17,7 @@
 
 </header>
 
-<div class="push text-center">
+<div class="push pad-t-1-2 text-center">
   <i class="icon i-96">
     <img class="img-flex" src="images/icon-head.svg" alt="head"></img>
   </i>
