Update image of logo

--- a/_includes/cards.html
+++ b/_includes/cards.html
@@ -16,7 +16,7 @@
         <div class="card-image island-1-2">
           <a href="project-logo.html">
           <div>
-            <img class="img-flex" src="images/redesign-logo.jpg" alt="card"></img>
+            <img class="img-flex" src="images/logo.svg" alt="logo-redesign"></img>
           </div>
           <div>
             <h3 class="push-1-8">Logo Re-Design</h3>
