--- a/_includes/cards.html
+++ b/_includes/cards.html
@@ -3,7 +3,7 @@
       <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
         <div class="card-image island-1-2">
           <i class="icon i-256">
-            <img class="img-flex" src="images/box.png" alt="card"></img>
+            <img class="img-flex" src="images/placeholder-2by3.svg" alt="card"></img>
           </i>
           <div>
             <h3 class="push-1-8">Event Branding</h3>
@@ -29,7 +29,7 @@
       <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
         <div class="card-image island-1-2">
           <i class="icon i-256">
-            <img class="img-flex" src="images/box.png" alt="card"></img>
+            <img class="img-flex" src="images/placeholder-2by3.svg" alt="card"></img>
           </i>
           <div>
             <h3 class="push-1-8">Project Two</h3>
