--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
 
      <div class="unit s-1 m-1-3 l-1-4 center-text">
        <i class="icon i-256">
-         <img class="img-flex card-image" src="images/profile-photo.png" alt="self-photo"></img>
+         <img class="img-flex card-image" src="images/placeholder-2by3.svg" alt="self-photo"></img>
        </i>
      </div>
 
