--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,7 +2,7 @@
 
    <div class="grid pad-t-2 pad-b-2">
 
-     <div class="unit s-1 m-1-3 l-1-4 center-text">
+     <div class="unit s-1 m-1-3 l-1-4 center-text island">
         <img class="img-flex card-image" src="images/placeholder-2by3.svg" alt="self-photo"></img>
      </div>
 
