Add content fill to cards

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,13 +8,13 @@
 
      <div class="unit s-1 m-2-3 l-3-4 gutter">
        <div class="grid">
-         <div class="unit s-1 m-1 l-1-2 island-1-4 content-distribute">
+         <div class="unit s-1 m-1 l-1-2 island-1-4 content-fill">
            <h2 class="tera push-1-2">About</h2>
            <p class="push-1-8 micro">My name is Krystyna Macleod and I am graphic designer interested in illustrations, UX/UI and branding. I am finishing my final year at Algonquin College for Graphic Design.</p>
            <p class="push-1-8 micro">I’m from reserve called Mistissini in Northern Quebec. I have an animation background and moved on to Graphic Design.</p>
            <p class="micro">I design graphics, illustration and UX/UI design.</p>
          </div>
-         <div class="unit s-1 m-1 l-2-3 island-1-4 content-distribute">
+         <div class="unit s-1 m-1 l-2-3 island-1-4 content-fill">
            <h2 class="tera push-1-2">Contact</h2>
            <p class="push-1-8 micro">E-mail me at</p>
            <a itemprop="email" href="mailto:hey@krystynamacleod.design">hey@krystynamacleod.design</a>
