--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,8 +21,8 @@
     {{content}}
   </main>
 
-  <footer class="pad-t-1-2 pad-b-1-2 center-text">
-    <p class="micro push-1-8">© Krystyna Macleod</P>
+  <footer class="pad-t-1-2 pad-b-1-2 center-text" id="data-author" itemprop="author" itemscope itemtype="http://schema.org/Person">
+    <p class="micro push-1-8">© <span itemprop="name">TKrystyna Macleod</span></P>
   </footer>
 
 </body>
