Update content in somewhere

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
   </main>
 
   <footer class="pad-t-1-2 pad-b-1-2 center-text" id="data-author" itemprop="author" itemscope itemtype="http://schema.org/Person">
-    <p class="micro push-1-8">© <span itemprop="name">TKrystyna Macleod</span></P>
+    <p class="micro push-1-8">© <span itemprop="name">Krystyna Macleod</span></P>
   </footer>
 
 </body>
