--- a/_includes/cards.html
+++ b/_includes/cards.html
@@ -14,14 +14,14 @@
 
       <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
         <div class="card-image island-1-2">
-          <a href="project-logo.html">
-          <div>
-            <img class="img-flex" src="images/logo.svg" alt="logo-redesign"></img>
-          </div>
-          <div>
-            <h3 class="push-1-8">Logo Re-Design</h3>
-            <p>Branding</p>
-          </div>
+          <a href="project-logo.html" alt="project-logo">
+            <div>
+              <img class="img-flex" src="images/logo.svg" alt="logo-redesign"></img>
+            </div>
+            <div>
+              <h3 class="push-1-8">Logo Re-Design</h3>
+              <p>Branding</p>
+            </div>
           </a>
         </div>
       </div>
