--- a/_includes/body-content.html
+++ b/_includes/body-content.html
@@ -1,12 +1,38 @@
 <div>
   <div class="grid">
     <div class="unit s-1 m-1-2 l-1-2 text-center island">
-      <img class="img-flex" src="images/redesign-logo.jpg" alt="card"></img>
+      <img class="img-flex" src="images/logo.svg" alt="eskan-logo-redesign"></img>
     </div>
 
     <div class="unit s-1 m-1-2 l-1-2 island">
-      <h2 class="title">Re-design Logo</h2>
+      <h2 class="title">Eskan Company</h2>
       <p class="content">This was a re-designing of a company logo. I went with a northern company Eskan Company. </p>
+    </div>
+  </div>
+</div>
+
+<div>
+  <div class="grid">
+    <div class="unit s-1 m-1-2 l-1-2 text-center island">
+      <img class="img-flex" src="images/placeholder-1by1.svg" alt="sketeches"></img>
+    </div>
+
+    <div class="unit s-1 m-1-2 l-1-2 island">
+      <h2 class="title">Approach</h2>
+      <p class="content">This content needs to be filled </p>
+    </div>
+  </div>
+</div>
+
+<div>
+  <div class="grid">
+    <div class="unit s-1 m-1-2 l-1-2 text-center island">
+      <img class="img-flex" src="images/placeholder-1by1.svg" alt="branding-guidelines"></img>
+    </div>
+
+    <div class="unit s-1 m-1-2 l-1-2 island">
+      <h2 class="title">Paths</h2>
+      <p class="content">This content needs to be filled </p>
     </div>
   </div>
 </div>
