--- a/_includes/cards.html
+++ b/_includes/cards.html
@@ -2,13 +2,15 @@
 
       <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
         <div class="card-image island-1-2">
-          <i class="icon i-256">
-            <img class="img-flex" src="images/event-branding-icon.svg" alt="event-branding"></img>
-          </i>
-          <div>
-            <h3 class="push-1-8">Event Branding</h3>
-            <p>Branding</p>
-          </div>
+          <a href="{{site.baseurl}}/project-event.html" alt="event-branding">
+            <div>
+              <img class="img-flex" src="images/event-branding-icon.svg" alt="event-branding"></img>
+            </div>
+            <div>
+              <h3 class="push-1-8">Event Branding</h3>
+              <p>Branding</p>
+            </div>
+          </a>
         </div>
       </div>
 
