--- a/_includes/cards.html
+++ b/_includes/cards.html
@@ -3,7 +3,7 @@
       <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
         <div class="card-image island-1-2">
           <a href="{{site.baseurl}}/project-event.html" alt="event-branding">
-            <div>
+            <div class="push-1-2">
               <img class="img-flex" src="images/event-branding-icon.svg" alt="event-branding"></img>
             </div>
             <div>
@@ -17,7 +17,7 @@
       <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
         <div class="card-image island-1-2">
           <a href="{{site.baseurl}}/project-logo.html" alt="project-logo">
-            <div>
+            <div class="push-1-2">
               <img class="img-flex" src="images/logo.svg" alt="logo-redesign"></img>
             </div>
             <div>
