Add push to sub title

--- a/_includes/cards.html
+++ b/_includes/cards.html
@@ -8,7 +8,7 @@
             </div>
             <div>
               <h3 class="push-1-8">Event Branding</h3>
-              <p>Branding</p>
+              <p class="push-1-4">Branding</p>
             </div>
           </a>
         </div>
@@ -22,7 +22,7 @@
             </div>
             <div>
               <h3 class="push-1-8">Logo Re-Design</h3>
-              <p>Branding</p>
+              <p class="push-1-4">Branding</p>
             </div>
           </a>
         </div>
@@ -35,7 +35,7 @@
           </i>
           <div>
             <h3 class="push-1-8">Project Two</h3>
-            <p>UX</p>
+            <p class="push-1-4">UX</p>
           </div>
         </div>
       </div>
