--- a/_includes/cards.html
+++ b/_includes/cards.html
@@ -29,15 +29,17 @@
       </div>
 
       <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
-        <div class="card-image island-1-2">
-          <i class="icon i-256">
-            <img class="img-flex" src="images/placeholder-1by1.svg" alt="card"></img>
-          </i>
-          <div>
-            <h3 class="push-1-8">Project Two</h3>
-            <p class="push-1-4">UX</p>
+        <a href="{{site.baseurl}}/project-ux.html" alt="ux-project">
+          <div class="card-image island-1-2">
+            <div class="push-1-2">
+              <img class="img-flex" src="images/placeholder-1by1.svg" alt="card"></img>
+            </div>
+            <div>
+              <h3 class="push-1-8">Project Two</h3>
+              <p class="push-1-4">UX</p>
+            </div>
           </div>
-        </div>
+        </a>
       </div>
 
     </div>
