Add link to social media

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,6 +17,12 @@
            <h2 class="tera push-1-2">Contact</h2>
            <p class="push-1-8 micro">E-mail me at</p>
            <a itemprop="email" href="mailto:hey@krystynamacleod.design">hey@krystynamacleod.design</a>
+           <div class="text-center">
+            <i class="icon i-48">
+              <a href="https://www.instagram.com/k.macleod.design/"><img class="img-flex" src="images/instagram.svg" alt="mini-me"></img></a>
+            </i>
+            <p class="micro">Krystyna Macleod</p>
+          </div>
          </div>
        </div>
      </div>
