--- a/_includes/body-content.html
+++ b/_includes/body-content.html
@@ -4,8 +4,8 @@
       <img class="img-flex" src="images/logo.svg" alt="eskan-logo-redesign"></img>
     </div>
 
-    <div class="unit s-1 m-1-2 l-1-2 island">
-      <h2 class="title">Eskan Company</h2>
+    <div itemscope itemtype="http://schema.org/Person class="unit s-1 m-1-2 l-1-2 island">
+      <h2 itemscop="name" class="title">Eskan Company</h2>
       <p class="content">This was a re-designing of a company logo. I went with a northern company Eskan Company. </p>
     </div>
   </div>
