Remove name from link

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -18,10 +18,9 @@
            <p class="push-1-8 micro">E-mail me at</p>
            <a itemprop="email" href="mailto:hey@krystynamacleod.design">hey@krystynamacleod.design</a>
            <div class="pad-t">
-            <i class="icon i-48 center-text pad-b-1-4">
+            <i class="icon i-48 pad-b-1-4">
               <a href="https://www.instagram.com/k.macleod.design/"><img class="img-flex" src="images/instagram.svg" alt="mini-me"></img></a>
             </i>
-            <p class="micro">Krystyna Macleod</p>
           </div>
          </div>
        </div>
