Add / to image link

--- a/_includes/body-content.html
+++ b/_includes/body-content.html
@@ -1,7 +1,7 @@
 <div>
   <div class="grid">
     <div class="unit s-1 m-1-2 l-1-2 text-center island">
-      <img class="img-flex" src="images/logo.svg" alt="eskan-logo-redesign"></img>
+      <img class="img-flex" src="/images/logo.svg" alt="eskan-logo-redesign"></img>
     </div>
 
     <div itemscope itemtype="http://schema.org/Person class="unit s-1 m-1-2 l-1-2 island">
@@ -14,7 +14,7 @@
 <div>
   <div class="grid">
     <div class="unit s-1 m-1-2 l-1-2 text-center island">
-      <img class="img-flex" src="images/placeholder-1by1.svg" alt="sketeches"></img>
+      <img class="img-flex" src="/images/placeholder-1by1.svg" alt="sketeches"></img>
     </div>
 
     <div class="unit s-1 m-1-2 l-1-2 island">
@@ -27,7 +27,7 @@
 <div>
   <div class="grid">
     <div class="unit s-1 m-1-2 l-1-2 text-center island">
-      <img class="img-flex" src="images/placeholder-1by1.svg" alt="branding-guidelines"></img>
+      <img class="img-flex" src="/images/placeholder-1by1.svg" alt="branding-guidelines"></img>
     </div>
 
     <div class="unit s-1 m-1-2 l-1-2 island">
