--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,6 +18,6 @@
 
 <div class="push pad-t-1-2 text-center">
   <i class="icon i-96">
-    <img class="img-flex" src="images/icon-head.svg" alt="head"></img>
+    <img class="img-flex" src="/images/icon-head.svg" alt="head"></img>
   </i>
 </div>
