--- a/_includes/body-content.html
+++ b/_includes/body-content.html
@@ -11,7 +11,7 @@
   </div>
 </div>
 
-<div>
+<div class="section-body">
   <div class="grid">
     <div class="unit s-1 m-1-2 l-1-2 text-center island">
       <img class="img-flex" src="/images/placeholder-1by1.svg" alt="sketeches"></img>
