--- a/_includes/cards.html
+++ b/_includes/cards.html
@@ -2,7 +2,7 @@
 
   <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
     <div class="card-image island-1-2">
-      <a href="{{site.baseurl}}/project-event.html" alt="event-branding">
+      <a href="{{site.baseurl}}/event-branding.html" alt="Event Branding Pages">
         <div class="push-1-2">
           <img class="img-flex" src="images/event-branding-icon.svg" alt="event-branding"></img>
         </div>
@@ -16,7 +16,7 @@
 
   <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
     <div class="card-image island-1-2">
-      <a href="{{site.baseurl}}/project-logo" alt="project-logo">
+      <a href="{{site.baseurl}}/project-logo" alt="Logo Re-design Page">
         <div class="push-1-2">
           <img class="img-flex" src="images/logo.svg" alt="logo-redesign"></img>
         </div>
@@ -29,7 +29,7 @@
   </div>
 
   <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
-    <a href="{{site.baseurl}}/project-ux.html" alt="ux-project">
+    <a href="{{site.baseurl}}/project-ux.html" alt="New project page">
       <div class="card-image island-1-2">
         <div class="push-1-2">
           <img class="img-flex" src="images/placeholder-1by1.svg" alt="card"></img>
