--- a/_includes/cards.html
+++ b/_includes/cards.html
@@ -2,7 +2,7 @@
 
   <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
     <div class="card-image island-1-2">
-      <a href="{{site.baseurl}}/event-branding.html" alt="Event Branding Pages">
+      <a href="{{site.baseurl}}/event-branding" alt="Event Branding Page">
         <div class="push-1-2">
           <img class="img-flex" src="images/event-branding-icon.svg" alt="event-branding"></img>
         </div>
