--- a/_includes/body-content.html
+++ b/_includes/body-content.html
@@ -1,12 +1,12 @@
 <div>
   <div class="grid">
     <div class="unit s-1 m-1-2 l-1-2 text-center island">
-      <img class="img-flex" src="/images/logo.svg" alt="eskan-logo-redesign"></img>
+      <img class="img-flex" src="/images/{{page.logo}}" alt="eskan-logo-redesign"></img>
     </div>
 
     <div itemscope itemtype="http://schema.org/Person" class="unit s-1 m-1-2 l-1-2 island">
-      <h2 itemscop="name" class="title">Eskan Company</h2>
-      <p class="content">This was a re-designing of a company logo. I went with a northern company Eskan Company. </p>
+      <h2 itemscop="name" class="title">{{page.h1}}</h2>
+      <p class="content">{{page.body}}</p>
     </div>
   </div>
 </div>
