--- a/_includes/body-content.html
+++ b/_includes/body-content.html
@@ -1,11 +1,11 @@
 <div>
   <div class="grid">
     <div class="unit s-1 m-1-2 l-1-2 text-center island">
-      <img class="img-flex" src="/images/{{page.logo}}" alt="eskan-logo-redesign"></img>
+      <img class="img-flex" src="/images/{{page.logo}}" alt="Main image of project"></img>
     </div>
 
     <div itemscope itemtype="http://schema.org/Person" class="unit s-1 m-1-2 l-1-2 island">
-      <h2 itemscop="name" class="title">{{page.h1}}</h2>
+      <h2 itemscop="name" class="title push-1-2">{{page.h1}}</h2>
       <p class="content">{{page.body}}</p>
     </div>
   </div>
