--- a/_includes/images.html
+++ b/_includes/images.html
@@ -3,7 +3,7 @@
   <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
     <div class="card-image island-1-2">
       <div class="push-1-2">
-        <img class="img-flex" src="/images/sketches.svg" alt="Logo Sketches"></img>
+        <img class="img-flex" src="/images/sketches.svg" alt="Sketches of project"></img>
       </div>
     </div>
   </div>
