--- a/_includes/images.html
+++ b/_includes/images.html
@@ -3,7 +3,7 @@
   <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
     <div class="card-image island-1-2">
       <div class="push-1-2">
-        <img class="img-flex" src="/images/sketches.svg" alt="Sketches of project"></img>
+        <img class="img-flex" src="/images/{{page.image1}}" alt="Sketches of project"></img>
       </div>
     </div>
   </div>
@@ -11,7 +11,7 @@
   <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
     <div class="card-image island-1-2">
       <div class="push-1-2">
-        <img class="img-flex" src="/images/mock-up-logo-branding.jpg" alt="Branding Guideline pages"></img>
+        <img class="img-flex" src="/images/{{page.image2}}" alt="Image of project"></img>
       </div>
     </div>
   </div>
@@ -19,7 +19,7 @@
   <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
     <div class="card-image island-1-2">
       <div class="push-1-2">
-        <img class="img-flex" src="/images/logo-design.svg" alt="Logo Design"></img>
+        <img class="img-flex" src="/images/{{page.image3}}" alt="Image of project"></img>
       </div>
     </div>
   </div>
