Change h1 in nav

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,6 +4,10 @@
     <a href="{{site.baseurl}}/index.html" alt="homepage">Homepage</a>
   </div>
 
+  <div class="push-1-8 my-name gutter">
+    <h1 class="tena push-1-4"></h1>
+  </div>
+
   <div class="nav-bar gutter-2">
     <nav>
       <a class="gutter-1-8" href="#about" alt="About-me">About</a>
