--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,3 +1,3 @@
 <div>
-  <img class="img-flex" src="/images/banner.svg" alt="banner"></img>
+  <img class="img-flex" src="/images/banner-2.svg" alt="banner"></img>
 </div>
