Update content text

--- a/_includes/cards.html
+++ b/_includes/cards.html
@@ -35,8 +35,8 @@
           <img class="img-flex" src="images/placeholder-1by1.svg" alt="card"></img>
         </div>
         <div>
-          <h3 class="push-1-8">Project Two</h3>
-          <p class="push-1-4">UX</p>
+          <h3 class="push-1-8">Coming Soon</h3>
+          <p class="push-1-4">Idea in the making</p>
         </div>
       </div>
     </a>
