Update images placement

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,7 +5,7 @@
   </div>
 
   <div class="push-1-8 my-name gutter">
-    <h1 class="tena push-1-4">Krystyna</h1>
+    <h1 class="push-1-4">Krystyna</h1>
   </div>
 
   <div class="nav-bar gutter-2">
