--- a/css/main.css
+++ b/css/main.css
@@ -50,11 +50,7 @@ footer {
 .header {
   display: flex;
   flex-direction: row;
-}
-
-.my-name {
-  background-color: #fff;
-  margin: 1px;
+  border-bottom: 2px #58a4b0 solid;
 }
 
 .nav-bar {
@@ -67,21 +63,10 @@ footer {
     margin-top: 20px;
   }
 
-  h1 {
-    color: #404040;
-    display: block;
-  }
-
   .header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background-image: linear-gradient(to bottom, white 0%, white 49%, #58a4b0 49.1%, #58a4b0 49.9%, white 50%, white 100%);
-  }
-
-  .my-name {
-    background-color: #fff;
-    margin: 1px;
   }
 
   .nav-bar {
