--- a/_includes/images.html
+++ b/_includes/images.html
@@ -1,7 +1,7 @@
 <div class="grid push-2">
 
   <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
-    <div class="card-image island-1-2">
+    <div class="island-1-2">
       <div class="push-1-2">
         <img class="img-flex" src="/images/{{page.image1}}" alt="Sketches of project"></img>
       </div>
@@ -9,7 +9,7 @@
   </div>
 
   <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
-    <div class="card-image island-1-2">
+    <div class="island-1-2">
       <div class="push-1-2">
         <img class="img-flex" src="/images/{{page.image2}}" alt="Image of project"></img>
       </div>
@@ -17,7 +17,7 @@
   </div>
 
   <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
-    <div class="card-image island-1-2">
+    <div class="island-1-2">
       <div class="push-1-2">
         <img class="img-flex" src="/images/{{page.image3}}" alt="Image of project"></img>
       </div>
