Add social media icon

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,16 +10,18 @@
        <div class="grid">
          <div class="unit s-1 m-1 l-1-2 island-1-4 content-fill content-shrink">
            <h2 class="tera push-1-2">About</h2>
-           <p class="push-1-8 micro">My name is Krystyna Macleod and I am graphic designer interested in illustrations, UX/UI and branding. I am finishing my final year at Algonquin College for Graphic Design.</p>
-           <p class="push-1-8 micro">I’m from reserve called Mistissini in Northern Quebec. I have an animation background and moved on to Graphic Design.</p>
+           <p class="push-1-8 micro">My Name is Krystyna Macleod and I am an innovative thinker that come up with unique design that helps brings the design to the present. </p>
+           <p class="push-1-8 micro">I’m from reserve called Mistissini in Northern Quebec. I have an animation background and have expand my learning to Graphic Design.</p>
          </div>
          <div class="unit s-1 m-1 l-2-3 island-1-4 content-fill content-shrink">
-           <h2 class="tera push-1-2">Contact</h2>
-           <p class="push-1-8 micro">E-mail me at</p>
-           <a itemprop="email" href="mailto:hey@krystynamacleod.design">hey@krystynamacleod.design</a>
+           <h2 class="tera push-1-4">Contact</h2>
+           <a class="milli" itemprop="email" href="mailto:hey@krystynamacleod.design">hey@krystynamacleod.design</a>
            <div class="pad-t">
             <i class="icon i-48 pad-b-1-4">
-              <a href="https://www.instagram.com/k.macleod.design/"><img class="img-flex" src="images/instagram.svg" alt="mini-me"></img></a>
+              <a href="https://www.instagram.com/k.macleod.design/"><img class="img-flex" src="images/instagram.svg" alt="instagram"></img></a>
+            </i>
+            <i class="icon i-48 pad-b-1-4">
+              <a href="https://www.instagram.com/k.macleod.design/"><img class="img-flex" src="images/linkedin.svg" alt="Linkedin"></img></a>
             </i>
           </div>
          </div>
