Change colour to text

--- a/_includes/cards.html
+++ b/_includes/cards.html
@@ -8,7 +8,7 @@
         </div>
         <div>
           <h3 class="push-1-8">Event Branding</h3>
-          <p class="push-1-4">Branding</p>
+          <p class="push-1-4 about-text micro">Branding</p>
         </div>
       </a>
     </div>
@@ -22,7 +22,7 @@
         </div>
         <div>
           <h3 class="push-1-8">Logo Re-Design</h3>
-          <p class="push-1-4">Branding</p>
+          <p class="push-1-4 about-text micro">Branding</p>
         </div>
       </a>
     </div>
@@ -36,7 +36,7 @@
         </div>
         <div>
           <h3 class="push-1-8">Coming Soon</h3>
-          <p class="push-1-4">Idea in the making</p>
+          <p class="push-1-4 about-text micro">Idea in the making</p>
         </div>
       </div>
     </a>
