--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,14 @@ h2, h3 {
   color: #58a4b0;
 }
 
+.about-text {
+  color: #606e7a;
+}
+
+.content-text {
+  color: #606e7a;
+}
+
 .btn {
   background-color: #8B7C7B;
   border-color: #8B7C7B;
