--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,20 +10,26 @@
        <div class="grid">
          <div class="unit s-1 m-1 l-1-2 island-1-4 content-fill content-shrink">
            <h2 class="tera push-1-2">About</h2>
-           <p class="push-1-8 micro">My Name is Krystyna Macleod and I am an innovative thinker that come up with unique design that helps brings the design to the present. </p>
-           <p class="push-1-8 micro">I’m from reserve called Mistissini in Northern Quebec. I have an animation background and have expand my learning to Graphic Design.</p>
+           <p class="push-1-8 micro about-text">My Name is Krystyna Macleod and I am an innovative thinker that come up with unique design that helps brings the design to the present. </p>
+           <p class="push-1-8 micro about-text">I’m from reserve called Mistissini in Northern Quebec. I have an animation background and have expand my learning to Graphic Design.</p>
          </div>
          <div class="unit s-1 m-1 l-2-3 island-1-4 content-fill content-shrink">
            <h2 class="tera push-1-4">Contact</h2>
            <a class="milli" itemprop="email" href="mailto:hey@krystynamacleod.design">hey@krystynamacleod.design</a>
-           <div class="pad-t">
-            <i class="icon i-48 pad-b-1-4">
-              <a href="https://www.instagram.com/k.macleod.design/"><img class="img-flex" src="images/instagram.svg" alt="instagram"></img></a>
-            </i>
-            <i class="icon i-48 pad-b-1-4">
-              <a href="https://www.instagram.com/k.macleod.design/"><img class="img-flex" src="images/linkedin.svg" alt="Linkedin"></img></a>
-            </i>
+
+           <div class="grid island">
+             <div class="unit s-1-2 m-1-2 l-1-3 pad-t-1-4 text-center">
+              <i class="icon i-48 pad-b-1-4">
+                <a href="https://www.instagram.com/k.macleod.design/"><img class="img-flex" src="images/instagram.svg" alt="instagram"></img></a>
+              </i>
+            </div>
+            <div class="unit s-1-2 m-1-2 l-2-3 pad-t-1-4">
+              <i class="icon i-48 pad-b-1-4">
+                <a href="https://www.linkedin.com/in/krystyna-macleod-042417173/"><img class="img-flex" src="images/linkin.svg" alt="Linkedin"></img></a>
+              </i>
+            </div>
           </div>
+
          </div>
        </div>
      </div>
