--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,6 +1,6 @@
 <section id="about">
 
-   <div class="grid pad-t-2 pad-b-2 wrapper">
+   <div class="grid pad-t-2 pad-b-1-2 wrapper">
 
      <div class="unit s-1 m-1-3 l-1-4 center-text island">
         <img class="img-flex" src="images/icon-head.svg" alt="self-photo"></img>
