--- a/_includes/cards.html
+++ b/_includes/cards.html
@@ -29,7 +29,7 @@
   </div>
 
   <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
-    <a href="{{site.baseurl}}/project-ux.html" alt="New project page">
+    <a href="{{site.baseurl}}/project" alt="New project page">
       <div class="card-image island-1-2">
         <div class="push-1-2">
           <img class="img-flex" src="images/placeholder-1by1.svg" alt="card"></img>
