Add content to illustration page

--- a/_includes/cards.html
+++ b/_includes/cards.html
@@ -32,11 +32,11 @@
     <a href="{{site.baseurl}}/project" alt="New project page">
       <div class="card-image island-1-2">
         <div class="push-1-2">
-          <img class="img-flex" src="images/placeholder-1by1.svg" alt="card"></img>
+          <img class="img-flex" src="images/laptop.svg" alt="card"></img>
         </div>
         <div>
-          <h3 class="push-1-8">Coming Soon</h3>
-          <p class="push-1-4 about-text micro">Idea in the making</p>
+          <h3 class="push-1-8">Illustrations</h3>
+          <p class="push-1-4 about-text micro">Icons</p>
         </div>
       </div>
     </a>
