--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>{{page.title}}</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="description" content="An amazing portfolio to showcase off the awesome graphic design skills">
   <link href="/css/modules.css" rel="stylesheet">
   <link href="/css/grid.css" rel="stylesheet">
   <link href="/css/type.css" rel="stylesheet">
