--- a/_includes/about.html
+++ b/_includes/about.html
@@ -20,12 +20,12 @@
            <div class="grid island">
              <div class="unit s-1-2 m-1-2 l-1-3 pad-t-1-4 text-center">
               <i class="icon i-48 pad-b-1-4">
-                <a href="https://www.instagram.com/k.macleod.design/"><img class="img-flex" src="images/instagram.svg" alt="instagram"></img></a>
+                <a href="https://www.instagram.com/k.macleod.design/"><img class="img-flex" src="{{site.baseurl}}/images/instagram.svg" alt="instagram"></img></a>
               </i>
             </div>
             <div class="unit s-1-2 m-1-2 l-2-3 pad-t-1-4">
               <i class="icon i-48 pad-b-1-4">
-                <a href="https://www.linkedin.com/in/krystyna-macleod-042417173/"><img class="img-flex" src="images/linkin.svg" alt="Linkedin"></img></a>
+                <a href="https://www.linkedin.com/in/krystyna-macleod-042417173/"><img class="img-flex" src="{{site.baseurl}}/images/linkin.svg" alt="Linkedin"></img></a>
               </i>
             </div>
           </div>
