--- a/_includes/cards.html
+++ b/_includes/cards.html
@@ -4,7 +4,7 @@
     <div class="card-image island-1-2">
       <a href="{{site.baseurl}}/event-branding" alt="Event Branding Page">
         <div class="push-1-2">
-          <img class="img-flex" src="images/event-branding-icon.svg" alt="event-branding"></img>
+          <img class="img-flex" src="{{site.baseurl}}/images/event-branding-icon.svg" alt="event-branding"></img>
         </div>
         <div>
           <h3 class="push-1-8">Event Branding</h3>
@@ -18,7 +18,7 @@
     <div class="card-image island-1-2">
       <a href="{{site.baseurl}}/project-logo" alt="Logo Re-design Page">
         <div class="push-1-2">
-          <img class="img-flex" src="images/logo.svg" alt="logo-redesign"></img>
+          <img class="img-flex" src="{{site.baseurl}}/images/logo.svg" alt="logo-redesign"></img>
         </div>
         <div>
           <h3 class="push-1-8">Logo Re-Design</h3>
@@ -32,7 +32,7 @@
     <a href="{{site.baseurl}}/project" alt="New project page">
       <div class="card-image island-1-2">
         <div class="push-1-2">
-          <img class="img-flex" src="images/laptop.svg" alt="card"></img>
+          <img class="img-flex" src="{{site.baseurl}}/images/laptop.svg" alt="card"></img>
         </div>
         <div>
           <h3 class="push-1-8">Illustrations</h3>
