--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,10 @@
   <title>{{page.title}}</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="An amazing portfolio to showcase off the awesome graphic design skills">
-  <link href="/css/modules.css" rel="stylesheet">
-  <link href="/css/grid.css" rel="stylesheet">
-  <link href="/css/type.css" rel="stylesheet">
-  <link href="/css/main.css" rel="stylesheet">
+  <link href="{{site.baseurl}}/css/modules.css" rel="stylesheet">
+  <link href="{{site.baseurl}}/css/grid.css" rel="stylesheet">
+  <link href="{{site.baseurl}}/css/type.css" rel="stylesheet">
+  <link href="{{site.baseurl}}/css/main.css" rel="stylesheet">
 </head>
 <body>
 
