--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,7 +3,7 @@
    <div class="grid pad-t-2 pad-b-1-2 wrapper">
 
      <div class="unit s-1 m-1-3 l-1-4 center-text island">
-        <img class="img-flex" src="images/photo.jpg" alt="self-photo"></img>
+        <img class="img-flex" src="{{site.baseurl}}/images/photo.jpg" alt="self-photo"></img>
      </div>
 
      <div class="unit s-1 m-2-3 l-3-4 gutter">
