--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<header class="text-center header push-1-4">
+<div class="text-center header push-1-4">
 
   <div class="nav-bar gutter-2">
     <a href="{{site.baseurl}}/index.html" alt="homepage">Homepage</a>
@@ -14,4 +14,4 @@
     <nav>
   </div>
 
-</header>
+</div>
