--- a/_includes/cards.html
+++ b/_includes/cards.html
@@ -18,7 +18,7 @@
     <div class="card-image island-1-2">
       <a href="{{site.baseurl}}/project-logo" alt="Logo Re-design Page">
         <div class="push-1-2">
-          <img class="img-flex" src="{{site.baseurl}}/images/logo.svg" alt="logo-redesign"></img>
+          <img class="img-flex" src="{{site.baseurl}}/images/logo.svg" alt="Logo Redesign"></img>
         </div>
         <div>
           <h3 class="push-1-8">Logo Re-Design</h3>
