--- a/_includes/images.html
+++ b/_includes/images.html
@@ -18,8 +18,10 @@
 
   <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
     <div class="island-1-2">
-      <div class="push-1-2">
+      <figure class="push-1-2">
         <img class="img-flex" src="{{site.baseurl}}/images/{{page.image3}}" alt="Image of project"></img>
+        <figcaption class="milli">{{page.image3-content}}</figcaption>
+      </figure>
       </div>
     </div>
   </div>
