--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ a:hover {
   border-color: #8B7C7B;
 }
 
-h2, h3, p, a {
+h2, h3, p, a, figcaption {
   font-family: 'Comfortaa', cursive;
 }
 
@@ -18,6 +18,10 @@ h1 {
 }
 
 h2, h3 {
+  color: #58a4b0;
+}
+
+figcaption {
   color: #58a4b0;
 }
 
