--- a/_includes/images.html
+++ b/_includes/images.html
@@ -2,17 +2,19 @@
 
   <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
     <div class="island-1-2">
-      <div class="push-1-2">
-        <img class="img-flex" src="{{site.baseurl}}/images/{{page.image1}}" alt="Sketches of project"></img>
-      </div>
+      <figure class="push-1-2">
+        <img class="img-flex" src="{{site.baseurl}}/images/{{page.image1}}" alt="Image of project"></img>
+        <figcaption class="milli">{{page.image1-content}}</figcaption>
+      </figure>
     </div>
   </div>
 
   <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
     <div class="island-1-2">
-      <div class="push-1-2">
+      <figure class="push-1-2">
         <img class="img-flex" src="{{site.baseurl}}/images/{{page.image2}}" alt="Image of project"></img>
-      </div>
+        <figcaption class="milli">{{page.image2-content}}</figcaption>
+      </figure>
     </div>
   </div>
 
