--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,8 @@
   <title>{{page.title}}</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="An amazing portfolio to showcase off the awesome graphic design skills">
+  <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+  <meta name="msapplication-TileColor" content="#ffffff">
   <link href="{{site.baseurl}}/css/site.css" rel="stylesheet">
 </head>
 <body>
