Video added to logo page

--- a/_includes/video.html
+++ b/_includes/video.html
@@ -1,3 +1,3 @@
-<div class="embed embed-4by3 absolute w-1 pin-cl">
+<div class="embed embed-4by3">
   <video class="embed-item" muted loop autoplay src="{{base.baseurl}}/images/logo-animation.mp4"></video>
 </div>
