--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
     {{content}}
   </main>
 
-  <footer class="pad-t-1-2 pad-b-1-2 center-text" id="data-author" itemprop="author" itemscope itemtype="http://schema.org/Person">
+  <footer class="pad-t-1-2 pad-b-1-2 center-text" role="contentinfo" id="data-author" itemprop="author" itemscope itemtype="http://schema.org/Person">
     <p class="micro push-1-8">© <span itemprop="name">Krystyna Macleod</span></P>
   </footer>
 
