--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,13 +3,13 @@
    <div class="grid pad-t-2 pad-b-1-2 wrapper">
 
      <div class="unit s-1 m-1-3 l-1-4 center-text island">
-        <img class="img-flex" src="{{site.baseurl}}/images/photo.jpg" alt="self-photo"></img>
+        <img class="img-flex" src="{{site.baseurl}}/images/photo.jpg" alt="self-photo" aria-details="#photography-of-Krystyna"></img>
      </div>
 
      <div class="unit s-1 m-2-3 l-3-4 gutter">
        <div class="grid">
          <div class="unit s-1 m-1 l-1-2 island-1-4 content-fill content-shrink">
-           <h2 class="tera push-1-2">About</h2>
+           <h2 class="tera push-1-2" aria-label="Information about Krystyna">About</h2>
            <p class="push-1-8 micro about-text">My Name is Krystyna Macleod and I am an innovative thinker that come up with unique design that helps brings the design to the present. </p>
            <p class="push-1-8 micro about-text">I’m from reserve called Mistissini in Northern Quebec. I have an animation background and have expand my learning to Graphic Design.</p>
          </div>
