--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,3 +1,3 @@
 <div>
-  <img class="img-flex" src="{{site.baseurl}}/images/banner-2.svg" alt="banner"></img>
+  <img class="img-flex" src="{{site.baseurl}}/images/banner-2.svg" alt="Banner of illustrations" role="banner" aria-details="#illustations-of-desk"></img>
 </div>
