Add aria to cards

--- a/_includes/body-content.html
+++ b/_includes/body-content.html
@@ -2,7 +2,7 @@
   <div class="grid">
 
     <div class="unit s-1 m-1-2 l-1-2 text-center island">
-      <img class="img-flex" src="{{site.baseurl}}/images/{{page.logo}}" alt="Main image of project"></img>
+      <img class="img-flex" src="{{site.baseurl}}/images/{{page.logo}}" aria-detail="#main-Illustration" alt="Main image of project"></img>
     </div>
 
     <div itemscope itemtype="http://schema.org/Person" class="unit s-1 m-1-2 l-1-2 island">
