--- a/_includes/cards.html
+++ b/_includes/cards.html
@@ -2,9 +2,9 @@
 
   <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
     <div class="card-image island-1-2">
-      <a href="{{site.baseurl}}/event-branding" alt="Event Branding Page">
+      <a href="{{site.baseurl}}/event-branding" aria-label="This card links to the event branding page" alt="Event Branding Page">
         <div class="push-1-2">
-          <img class="img-flex" src="{{site.baseurl}}/images/event-branding-icon.svg" alt="event-branding"></img>
+          <img class="img-flex" src="{{site.baseurl}}/images/event-branding-icon.svg" aria-details="#Illustration-icon-of-branding-event" alt="event-branding"></img>
         </div>
         <div>
           <h3 class="push-1-8">Event Branding</h3>
