Add content and aria

--- a/_includes/body-content.html
+++ b/_includes/body-content.html
@@ -6,8 +6,15 @@
     </div>
 
     <div itemscope itemtype="http://schema.org/Person" class="unit s-1 m-1-2 l-1-2 island">
-      <h2 itemscop="name" class="title push-1-4 pad-t-2">{{page.h1}}</h2>
-      <p class="content">{{page.body}}</p>
+      <h2 itemscop="name" class="title push-1-4 tera">{{page.h1}}</h2>
+      <p class="content push-1-2">{{page.body}}</p>
+
+      <h2 itemscop="name" class="title push-1-4 pad-t-1-2 tera">{{page.h2}}</h2>
+      <p class="content push-1-2">{{page.body-2}}</p>
+
+      <h2 itemscop="name" class="title push-1-4 pad-t-1-2 tera">{{page.h3}}</h2>
+      <p class="content">{{page.body-3}}</p>
+
     </div>
 
   </div>
