Add changes to illustration page

--- a/_includes/images-2.html
+++ b/_includes/images-2.html
@@ -4,7 +4,7 @@
     <div class="island-1-2">
       <figure class="push-1-2">
         <img class="img-flex" src="{{site.baseurl}}/images/{{page.image01}}" alt="Image of project"></img>
-        <figcaption class="milli">{{page.image01-content}}</figcaption>
+        <figcaption class="milli pad-t-1-2">{{page.image01-content}}</figcaption>
       </figure>
     </div>
   </div>
@@ -13,7 +13,7 @@
     <div class="island-1-2">
       <figure class="push-1-2">
         <img class="img-flex" src="{{site.baseurl}}/images/{{page.image02}}" alt="Image of project"></img>
-        <figcaption class="milli">{{page.image02-content}}</figcaption>
+        <figcaption class="milli pad-t-1-2">{{page.image02-content}}</figcaption>
       </figure>
     </div>
   </div>
@@ -22,7 +22,7 @@
     <div class="island-1-2">
       <figure class="push-1-2">
         <img class="img-flex" src="{{site.baseurl}}/images/{{page.image03}}" alt="Image of project"></img>
-        <figcaption class="milli">{{page.image03-content}}</figcaption>
+        <figcaption class="milli pad-t-1-2">{{page.image03-content}}</figcaption>
       </figure>
       </div>
     </div>
