Add pading to image figcaption

--- a/_includes/images.html
+++ b/_includes/images.html
@@ -4,7 +4,7 @@
     <div class="island-1-2">
       <figure class="push-1-2">
         <img class="img-flex" src="{{site.baseurl}}/images/{{page.image1}}" alt="Image of project"></img>
-        <figcaption class="milli">{{page.image1-content}}</figcaption>
+        <figcaption class="milli pad-t-1-2">{{page.image1-content}}</figcaption>
       </figure>
     </div>
   </div>
@@ -13,7 +13,7 @@
     <div class="island-1-2">
       <figure class="push-1-2">
         <img class="img-flex" src="{{site.baseurl}}/images/{{page.image2}}" alt="Image of project"></img>
-        <figcaption class="milli">{{page.image2-content}}</figcaption>
+        <figcaption class="milli pad-t-1-2">{{page.image2-content}}</figcaption>
       </figure>
     </div>
   </div>
@@ -22,7 +22,7 @@
     <div class="island-1-2">
       <figure class="push-1-2">
         <img class="img-flex" src="{{site.baseurl}}/images/{{page.image3}}" alt="Image of project"></img>
-        <figcaption class="milli">{{page.image3-content}}</figcaption>
+        <figcaption class="milli pad-t-1-2">{{page.image3-content}}</figcaption>
       </figure>
       </div>
     </div>
