--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,17 @@
+@font-face {
+  font-family: 'comfortaa';
+  src: url('../fonts/comfortaa-bold-webfont.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'comfortaa';
+  src: url('../fonts/comfortaa-regular-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 a {
   text-decoration: none;
   color: #58a4b0;
