Cleaning out css

--- a/css/type.css
+++ b/css/type.css
@@ -13,35 +13,6 @@ a {
   -webkit-text-decoration-skip: objects;
 }
 
-sub,
-sup {
-  font-size: .75em;
-  line-height: 1px;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sup {
-  top: -.5em;
-}
-
-sub {
-  bottom: -.25em;
-}
-
-pre,
-code,
-kbd,
-samp {
-  font-size: 1em;
-}
-
-abbr[title] {
-  border-bottom: none;
-  text-decoration: underline;
-  text-decoration: underline dotted;
-}
-
 b,
 strong {
   font-weight: bold;
@@ -120,14 +91,9 @@ caption {
 h1,
 h2,
 h3,
-h4,
-h5,
-h6,
 p,
 ul,
 ol,
-dl,
-dd,
 figure {
   margin: 0 0 1.3rem;
 }
@@ -456,21 +422,6 @@ caption {
   width: 2.6rem;
 }
 
-select {
-  padding: 0 .1625rem;
-}
-
-fieldset {
-  padding: .325rem 0;
-
-  border: 0;
-  border-top: 2px solid #000;
-}
-
-legend {
-  padding-right: .325rem;
-}
-
 @media only screen and (min-width: 38em) {
 
   html {
@@ -481,22 +432,12 @@ legend {
   h1,
   h2,
   h3,
-  h4,
-  h5,
-  h6,
   p,
   ul,
   ol,
-  dl,
-  dd,
   figure,
-  blockquote,
-  details,
   hr,
-  fieldset,
-  pre,
-  table,
-  caption {
+  pre {
     margin: 0 0 1.4rem;
   }
 
@@ -898,21 +839,10 @@ legend {
   h2,
   h3,
   h4,
-  h5,
-  h6,
   p,
   ul,
   ol,
-  dl,
-  dd,
-  figure,
-  blockquote,
-  details,
-  hr,
-  fieldset,
-  pre,
-  table,
-  caption {
+  figure {
     margin: 0 0 1.5rem;
   }
 
@@ -1284,21 +1214,6 @@ legend {
   .i-2 {
     height: 3rem;
     width: 3rem;
-  }
-
-  select {
-    padding: 0 .1875rem;
-  }
-
-  fieldset {
-    padding: .375rem 0;
-
-    border: 0;
-    border-top: 2px solid #000;
-  }
-
-  legend {
-    padding-right: .375rem;
   }
 
 }
@@ -1313,22 +1228,12 @@ legend {
   h1,
   h2,
   h3,
-  h4,
-  h5,
-  h6,
   p,
   ul,
   ol,
   dl,
   dd,
-  figure,
-  blockquote,
-  details,
-  hr,
-  fieldset,
-  pre,
-  table,
-  caption {
+  figure {
     margin: 0 0 1.5rem;
   }
 
@@ -1700,21 +1605,6 @@ legend {
   .i-2 {
     height: 3rem;
     width: 3rem;
-  }
-
-  select {
-    padding: 0 .1875rem;
-  }
-
-  fieldset {
-    padding: .375rem 0;
-
-    border: 0;
-    border-top: 2px solid #000;
-  }
-
-  legend {
-    padding-right: .375rem;
   }
 
 }
