--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,4 +1,4 @@
-<section id="about">
+<section id="about" role="complementary">
 
    <div class="grid pad-t-2 pad-b-1-2 wrapper">
 
@@ -14,18 +14,18 @@
            <p class="push-1-8 micro about-text">I’m from reserve called Mistissini in Northern Quebec. I have an animation background and have expand my learning to Graphic Design.</p>
          </div>
          <div class="unit s-1 m-1 l-2-3 island-1-4 content-fill content-shrink">
-           <h2 class="tera push-1-4">Contact</h2>
+           <h2 class="tera push-1-4" aria-label="How to content krystyna">Contact</h2>
            <a class="milli" itemprop="email" href="mailto:hey@krystynamacleod.design">hey@krystynamacleod.design</a>
 
            <div class="grid island">
              <div class="unit s-1-2 m-1-2 l-1-3 pad-t-1-4 text-center">
               <i class="icon i-48 pad-b-1-4">
-                <a href="https://www.instagram.com/k.macleod.design/"><img class="img-flex" src="{{site.baseurl}}/images/instagram.svg" alt="instagram"></img></a>
+                <a aria-label="Link to instagram" href="https://www.instagram.com/k.macleod.design/"><img class="img-flex" src="{{site.baseurl}}/images/instagram.svg" alt="instagram"></img></a>
               </i>
             </div>
             <div class="unit s-1-2 m-1-2 l-2-3 pad-t-1-4">
               <i class="icon i-48 pad-b-1-4">
-                <a href="https://www.linkedin.com/in/krystyna-macleod-042417173/"><img class="img-flex" src="{{site.baseurl}}/images/linkedin.svg" alt="Linkedin"></img></a>
+                <a aria-label="Link to Linkedin" href="https://www.linkedin.com/in/krystyna-macleod-042417173/"><img class="img-flex" src="{{site.baseurl}}/images/linkedin.svg" alt="Linkedin"></img></a>
               </i>
             </div>
           </div>
