Update link to about

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,7 +10,7 @@
 
   <div class="nav-bar gutter-2">
     <nav>
-      <a class="gutter-1-8" href="#about" alt="About-me">About</a>
+      <a class="gutter-1-8" href="{{site.baseurl}}/index.html#about" alt="About-me">About</a>
     <nav>
   </div>
 
