Add changes to homepage

--- a/_includes/motion.html
+++ b/_includes/motion.html
@@ -4,7 +4,6 @@ title: Portfolio · Illustration · Ottawa, ON
 meta: Awesome motion graphic.
 ---
 
-
 {% include banner.html %}
 
 <h2 class="exa center-text pad-t">Motion</h2>
@@ -13,6 +12,10 @@ meta: Awesome motion graphic.
 
   <div class="embed embed-4by3 push-2">
     <video class="embed-item" muted loop autoplay src="{{site.baseurl}}/images/5-seconds.mp4" atl="motion video"></video>
+  </div>
+
+  <div class="embed embed-4by3">
+    <video class="embed-item" muted loop autoplay src="{{site.baseurl}}/images/logo-animation.mp4" atl="Logo Animation of Eskan Logo"></video>
   </div>
 
 </main>
