Fix icons to social media

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,18 +17,26 @@
            <h2 class="tera push-1-4" aria-label="How to content krystyna">Contact</h2>
            <a class="milli" itemprop="email" href="mailto:hey@krystynamacleod.design">hey@krystynamacleod.design</a>
 
-           <div class="grid island">
-             <div class="unit s-1-2 m-1-2 l-1-3 pad-t-1-4 text-center">
-              <i class="icon i-48 pad-b-1-4">
-                <a aria-label="Link to instagram" href="https://www.instagram.com/k.macleod.design/"><img class="img-flex" src="{{site.baseurl}}/images/instagram.svg" alt="instagram"></img></a>
-              </i>
-            </div>
-            <div class="unit s-1-2 m-1-2 l-2-3 pad-t-1-4">
-              <i class="icon i-48 pad-b-1-4">
-                <a aria-label="Link to Linkedin" href="https://www.linkedin.com/in/krystyna-macleod-042417173/"><img class="img-flex" src="{{site.baseurl}}/images/linkedin.svg" alt="Linkedin"></img></a>
-              </i>
-            </div>
+          <div class="">
+            <ul class="list-group-inline">
+              <li>
+                <i class="icon i-48 pad-b-1-4">
+                  <a aria-label="Link to instagram" href="https://www.instagram.com/k.macleod.design/"><img class="img-flex" src="{{site.baseurl}}/images/instagram-icon.svg" alt="instagram"></img></a>
+                </i>
+              </li>
+              <li>
+                <i class="icon i-48 pad-b-1-4">
+                  <a aria-label="Link to Linkedin" href="https://www.linkedin.com/in/krystyna-macleod-042417173/"><img class="img-flex" src="{{site.baseurl}}/images/linkedin-icon.svg" alt="Linkedin"></img></a>
+                </i>
+              </li>
+              <li>
+                <i class="icon i-48 pad-b-1-4">
+                  <a aria-label="Link to Behance" href="https://www.behance.net/krystynamacleod"><img class="img-flex" src="{{site.baseurl}}/images/behance-icon.svg" alt="Behance"></img></a>
+                </i>
+              </li>
+            </ul>
           </div>
+
 
          </div>
        </div>
