Fix typo in image

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -26,7 +26,7 @@
               </li>
               <li>
                 <i class="icon i-48 pad-b-1-4">
-                  <a aria-label="Link to Linkedin" href="https://www.linkedin.com/in/krystyna-macleod-042417173/"><img class="img-flex" src="{{site.baseurl}}/images/linkedin-icon.svg" alt="Linkedin"></img></a>
+                  <a aria-label="Link to Linkedin" href="https://www.linkedin.com/in/krystyna-macleod-042417173/"><img class="img-flex" src="{{site.baseurl}}/images/linkden-icon.svg" alt="Linkedin"></img></a>
                 </i>
               </li>
               <li>
