Change gutter to icon

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,38 +7,39 @@
      </div>
 
      <div class="unit s-1 m-2-3 l-3-4 gutter">
+
        <div class="grid">
          <div class="unit s-1 m-1 l-1-2 island-1-4 content-fill content-shrink">
            <h2 class="tera push-1-2" aria-label="Information about Krystyna">About</h2>
            <p class="push-1-8 micro about-text">My Name is Krystyna Macleod and I am an innovative thinker that come up with unique design that helps brings the design to the present. </p>
            <p class="push-1-8 micro about-text">I’m from reserve called Mistissini in Northern Quebec. I have an animation background and have expand my learning to Graphic Design.</p>
          </div>
+
          <div class="unit s-1 m-1 l-2-3 island-1-4 content-fill content-shrink">
            <h2 class="tera push-1-4" aria-label="How to content krystyna">Contact</h2>
            <a class="milli" itemprop="email" href="mailto:hey@krystynamacleod.design">hey@krystynamacleod.design</a>
 
           <div class="island">
             <ul class="list-group-inline">
-              <li class="gutter">
+              <li class="gutter-1-8">
                 <i class="icon i-48 pad-b-1-4">
                   <a aria-label="Link to instagram" href="https://www.instagram.com/k.macleod.design/"><img class="img-flex" src="{{site.baseurl}}/images/instagram-icon.svg" alt="instagram"></img></a>
                 </i>
               </li>
-              <li class="gutter">
+              <li class="gutter-1-8">
                 <i class="icon i-48 pad-b-1-4">
                   <a aria-label="Link to Linkedin" href="https://www.linkedin.com/in/krystyna-macleod-042417173/"><img class="img-flex" src="{{site.baseurl}}/images/linkden-icon.svg" alt="Linkedin"></img></a>
                 </i>
               </li>
-              <li class="gutter">
+              <li class="gutter-1-8">
                 <i class="icon i-48 pad-b-1-4">
                   <a aria-label="Link to Behance" href="https://www.behance.net/krystynamacleod"><img class="img-flex" src="{{site.baseurl}}/images/behance-icon.svg" alt="Behance"></img></a>
                 </i>
               </li>
             </ul>
           </div>
+        </div>
 
-
-         </div>
        </div>
      </div>
    </div>
